Updated header to a Fixed header with a z-index of 10

--- a/styles/main.css
+++ b/styles/main.css
@@ -88,6 +88,18 @@ h1, h2, h3, h4, h5, h6 {
 .overflow--auto {
   overflow: auto;
 }
+.navbar-fixed-top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 128px;
+  z-index: 10;
+  background: rgb(255, 255, 255) ;
+/*  -webkit-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12);
+  box-shadow: 0 7px 8px rgba(0, 0, 0, 0.12); */
+}
 
 
 /*
